--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node ./bin/start"
+    "dev": "node ./bin/start"
   },
   "dependencies": {
     "debug": "^4.4.1",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "nodemon": "^3.1.10"
   }
 }
