--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "debug": "^4.4.1",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
-    "morgan": "^1.10.1",
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.19.2",
+    "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "3.1.10"
   }
 }
