--- a/.env.dev
+++ b/.env.dev
@@ -1,12 +1,16 @@
-# API
-PORT=3000
+#API
+APP_PORT=3000
+APP_HOST=0.0.0.0
 NODE_ENV=development
 
-# Mongo (réseau Docker: le hostname du service est "mongo")
+
+# Mongo
+MONGO_IMAGE=mongo:7
+MONGO_PORT=27017
 MONGO_USER=root
 MONGO_PASS=example
-MONGO_HOST=mongo
-MONGO_PORT=27017
+MONGO_VOLUME=mongo_data
 MONGO_DB=mydb
-
 MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DB}?authSource=admin
+MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASS}
