--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,38 +1,37 @@
 services:
   express-api:
-    # [host] Build de l’image à partir du Dockerfile.dev local
+    # Build de l’image (peut être surchargé via DOCKERFILE)
     build:
       context: .
       dockerfile: Dockerfile.dev
-    # [host] Charge les variables d’environnement locales si besoin
+    # Fichier d'env local
     env_file: .env.dev
     environment:
-      # Active le polling (nécessaire sur macOS/Windows avec Docker Desktop)
+      # variables de watch (peuvent être surchargées dans .env.dev)
       CHOKIDAR_USEPOLLING: "true"
-      CHOKIDAR_INTERVAL: "300" # ms, ajuste si besoin
-      # Pour nodemon (alternative si tu ne veux pas de chokidar) :
-      # NODEMON_USE_POLLING: "1"
-    # [host]<-> [container] Mappe le port hôte 3000 vers le port 3000 du conteneur
+      CHOKIDAR_INTERVAL: "300"
+      # exemple : port app et URI mongo (utilisé par ton code)
+      APP_PORT: "${APP_PORT:-3000}"
+      MONGO_URI: "${MONGO_URI:-mongodb://root:example@mongo:27017/?authSource=admin}"
     ports:
-      - "3000:3000"
-    # [host]<-> [container] Monte le code de l’hôte dans /app pour le hot-reload
+      - "${APP_PORT:-3000}:3000"
     volumes:
       - .:/app
-      # [host]<-> [container] Évite d’écraser node_modules du conteneur par un dossier vide de l’hôte
-    # [container] Commande de démarrage (assure le watch)
     command: npm run dev
     depends_on:
       - mongo
 
   mongo:
-    image: mongo:7
+    image: ${MONGO_IMAGE:-mongo:7}
     ports:
-      - "27017:27017" # optionnel en dev, utile si tu veux te connecter depuis l’hôte
+      - "${MONGO_PORT:-27017}:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME:-root}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:-example}
+    # nom du volume (peut être remplacé via MONGO_VOLUME)
     volumes:
-      - mongo_data:/data/db
+      - "${MONGO_VOLUME:-mongo_data}:/data/db"
 
+# volumes nommés optionnels (si tu veux en déclarer un par défaut)
 volumes:
   mongo_data:
