--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #API
-APP_PORT=3000
+APP_PORT=2001
 APP_HOST=0.0.0.0
 NODE_ENV=development
 
@@ -11,6 +11,7 @@ MONGO_USER=root
 MONGO_PASS=example
 MONGO_VOLUME=mongo_data
 MONGO_DB=mydb
+MONGO_HOST=mongo
 MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DB}?authSource=admin
 MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
 MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASS}
