--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     # Fichier d'env local
-    env_file: .env.dev
+    env_file: ".env"
     environment:
       # variables de watch (peuvent être surchargées dans .env.dev)
       CHOKIDAR_USEPOLLING: "true"
@@ -14,7 +14,7 @@ services:
       APP_PORT: "${APP_PORT:-3000}"
       MONGO_URI: "${MONGO_URI:-mongodb://root:example@mongo:27017/?authSource=admin}"
     ports:
-      - "${APP_PORT:-3000}:3000"
+      - "${APP_PORT}:${APP_PORT}"
     volumes:
       - .:/app
     command: npm run dev
@@ -24,7 +24,7 @@ services:
   mongo:
     image: ${MONGO_IMAGE:-mongo:7}
     ports:
-      - "${MONGO_PORT:-27017}:27017"
+      - "${MONGO_PORT:-27017}:${MONGO_PORT:-27017}"
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME:-root}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:-example}
