--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "debug": "^4.4.1",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
+    "js-yaml": "^4.1.1",
     "mongoose": "^8.19.2",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "3.1.10"
