--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -23,11 +23,14 @@ services:
 
   mongo:
     image: ${MONGO_IMAGE:-mongo:7}
+    command: mongod --quiet
     ports:
       - "${MONGO_PORT:-27017}:${MONGO_PORT:-27017}"
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME:-root}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:-example}
+      MONGO_LOG_LEVEL: warn
+
     # nom du volume (peut être remplacé via MONGO_VOLUME)
     volumes:
       - "${MONGO_VOLUME:-mongo_data}:/data/db"
