--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "debug": "^4.4.1",
     "express": "^5.1.0",
+    "express-validator": "^7.3.1",
     "http-errors": "^2.0.0",
     "js-yaml": "^4.1.1",
     "mongoose": "^8.19.2",
