--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_HOST=0.0.0.0
 NODE_ENV=development
 
 
-# Mongo
+#Mongo
 MONGO_IMAGE=mongo:7
 MONGO_PORT=27017
 MONGO_USER=root
@@ -15,3 +15,8 @@ MONGO_HOST=mongo
 MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DB}?authSource=admin
 MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
 MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASS}
+
+#Mongo TEST
+MONGO_USER_TEST=test
+MONGO_PASS_TEST=rando
+MONGO_DB_TEST=psf-app-test
