--- a/.env
+++ b/.env
@@ -10,13 +10,12 @@ MONGO_PORT=27017
 MONGO_USER=root
 MONGO_PASS=example
 MONGO_VOLUME=mongo_data
-MONGO_DB=mydb
-MONGO_HOST=mongo
-MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DB}?authSource=admin
-MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
-MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASS}
+MONGO_DEV_DB=mydb
+MONGO_HOST=mongo # Nom du service MongoDB dans docker-compose
+MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DEV_DB}?authSource=admin
 
 #Mongo TEST
 MONGO_USER_TEST=test
 MONGO_PASS_TEST=rando
-MONGO_DB_TEST=psf-app-test
+MONGO_TEST_DB=psf-app-test
+MONGO_URI_TEST=mongodb://${MONGO_USER_TEST}:${MONGO_PASS_TEST}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_TEST_DB}?authSource=admin
