--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,27 @@
-# MongoDB Connection
-MONGO_URI=mongodb://127.0.0.1/psf-app
-
-# JWT Configuration
-JWT_SECRET=your-secret-key-change-in-production
+APP_PORT=2001
+APP_HOST=0.0.0.0
+NODE_ENV=development
+JWT_SECRET=PLACEHOLDER_SECRET_KEY
 JWT_EXPIRES_IN=7d
 
-# Server Port
-PORT=3000
+
+#Mongo
+MONGO_IMAGE=mongo:7
+MONGO_PORT=27017
+MONGO_USER=root
+MONGO_PASS=example
+MONGO_VOLUME=mongo_data
+MONGO_DEV_DB=exampledb
+MONGO_HOST=mongo # Nom du service MongoDB dans docker-compose
+MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DEV_DB}?authSource=admin
+
+#Mongo TEST
+MONGO_USER_TEST=test
+MONGO_PASS_TEST=rando
+MONGO_TEST_DB=psf-app-test
+MONGO_URI_TEST=mongodb://${MONGO_USER_TEST}:${MONGO_PASS_TEST}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_TEST_DB}?authSource=admin
+
+#Cloudinary
+CLOUDINARY_CLOUD_NAME=ton_cloud_name
+CLOUDINARY_API_KEY=ta_cle_api
+CLOUDINARY_API_SECRET=ton_secret
