--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "test": "cross-env NODE_ENV=test DOTENV_CONFIG_QUIET=true node --experimental-vm-modules --disable-warning=ExperimentalWarning node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
+    "@we-gold/gpxjs": "^1.1.0",
     "bcryptjs": "^3.0.3",
-    "cloudinary": "^2.8.0",
+    "cloudinary": "^1.41.3",
     "debug": "^4.4.1",
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
+    "gpxparser": "^3.0.0",
     "http-errors": "^2.0.0",
     "js-yaml": "^4.1.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
