--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "test": "cross-env NODE_ENV=test DOTENV_CONFIG_QUIET=true node --experimental-vm-modules --disable-warning=ExperimentalWarning node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@we-gold/gpxjs": "^1.1.0",
+    "@tmcw/togeojson": "^7.1.2",
+    "@xmldom/xmldom": "^0.8.11",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^1.41.3",
     "debug": "^4.4.1",
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
-    "gpxparser": "^3.0.0",
     "http-errors": "^2.0.0",
     "js-yaml": "^4.1.1",
     "jsonwebtoken": "^9.0.3",
