update envs to meet new seeders needs

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,14 @@ NODE_ENV=development
 JWT_SECRET=PLACEHOLDER_SECRET_KEY
 JWT_EXPIRES_IN=7d
 
+# ===========================
+# ADMIN USER SEED
+# ===========================
+# Credentials pour créer l'utilisateur admin au premier démarrage
+ADMIN_MAIL=admin@example.com
+ADMIN_PASSWORD=secure_admin_password_change_me
+ADMIN_FIRSTNAME=Admin
+ADMIN_LASTNAME=System
 
 #Mongo
 MONGO_IMAGE=mongo:7
