--- a/.env.prod.example
+++ b/.env.prod.example
@@ -10,6 +10,16 @@ NODE_ENV=production
 APP_PORT=3000
 
 # ===========================
+# ADMIN USER SEED
+# ===========================
+# Credentials pour créer l'utilisateur admin au premier démarrage
+# ⚠️ IMPORTANT : Changez ces valeurs en production !
+ADMIN_MAIL=admin@votredomaine.com
+ADMIN_PASSWORD=your_very_secure_admin_password_change_this
+ADMIN_FIRSTNAME=Admin
+ADMIN_LASTNAME=System
+
+# ===========================
 # DATABASE - MONGODB
 # ===========================
 # URI MongoDB pour la production (connexion externe ou service)
