--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@xmldom/xmldom": "^0.8.11",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
     "debug": "^4.4.1",
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
