--- a/.env.prod.example
+++ b/.env.prod.example
@@ -7,7 +7,7 @@ NODE_ENV=production
 # APPLICATION
 # ===========================
 # Port sur lequel l'API écoute
-APP_PORT=3000
+APP_PORT=2001
 
 # ===========================
 # ADMIN USER SEED
@@ -19,16 +19,21 @@ ADMIN_PASSWORD=your_very_secure_admin_password_change_this
 ADMIN_FIRSTNAME=Admin
 ADMIN_LASTNAME=System
 
+
+
 # ===========================
 # DATABASE - MONGODB
 # ===========================
 # URI MongoDB pour la production (connexion externe ou service)
 # Format: mongodb://user:password@host:port/?authSource=admin
-MONGO_URI=mongodb://root:your_secure_password@mongo:27017/?authSource=admin
-
-# Credentials MongoDB pour l'initialisation du conteneur
+MONGO_IMAGE=mongo:7
+MONGO_PORT=27017
 MONGO_USER=root
-MONGO_PASS=your_very_secure_password_here
+MONGO_PASS=example
+MONGO_VOLUME=mongo_data
+MONGO_DEV_DB=exampledb
+MONGO_HOST=mongo # Nom du service MongoDB dans docker-compose
+MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DEV_DB}?authSource=admin
 
 # ===========================
 # JWT - AUTHENTICATION
