--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon --watch . --ext js,mjs,json --exec node ./bin/start",
     "seed": "node run-seeders.js",
     "seed:admin": "node seeders/admin.seeder.js",
+    "start-prod": "node ./bin/start.js",
     "test": "cross-env NODE_ENV=test DOTENV_CONFIG_QUIET=true node --experimental-vm-modules --disable-warning=ExperimentalWarning node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
