--- a/.env.prod.example
+++ b/.env.prod.example
@@ -31,9 +31,9 @@ MONGO_PORT=27017
 MONGO_USER=root
 MONGO_PASS=example
 MONGO_VOLUME=mongo_data
-MONGO_DEV_DB=exampledb
-MONGO_HOST=mongo # Nom du service MongoDB dans docker-compose
-MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_DEV_DB}?authSource=admin
+MONGO_PROD_DB=exampledb
+MONGO_HOST=mongo-prod # Nom du service MongoDB dans docker-compose
+MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASS}@${MONGO_HOST}:${MONGO_PORT}/${MONGO_PROD_DB}?authSource=admin
 
 # ===========================
 # JWT - AUTHENTICATION
