implémentation des notifications push côté backend

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,8 @@ MONGO_URI_TEST=mongodb://${MONGO_USER_TEST}:${MONGO_PASS_TEST}@${MONGO_HOST}:${M
 CLOUDINARY_CLOUD_NAME=ton_cloud_name
 CLOUDINARY_API_KEY=ta_cle_api
 CLOUDINARY_API_SECRET=ton_secret
+
+#Webpush Notifications
+VAPID_PUBLIC_KEY=EXAMPLEKEY...
+VAPID_PRIVATE_KEY=EXAMPLEKEY...
+VAPID_SUBJECT=https://mon-app.com
