Update prod Dockerfile

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -35,6 +35,7 @@ COPY --chown=nodejs:nodejs app.js .
 COPY --chown=nodejs:nodejs openapi.yml .
 COPY --chown=nodejs:nodejs seeders ./seeders
 COPY --chown=nodejs:nodejs run-seeders.js .
+COPY --chown=nodejs:nodejs webpush.js .
 
 # Switch to non-root user
 USER nodejs
