--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^1.41.3",
     "debug": "^4.4.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
     "http-errors": "^2.0.0",
     "js-yaml": "^4.1.1",
