--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@xmldom/xmldom": "^0.8.11",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
     "debug": "^4.4.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
