update .env.example with cors authorized

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_HOST=0.0.0.0
 NODE_ENV=development
 JWT_SECRET=PLACEHOLDER_SECRET_KEY
 JWT_EXPIRES_IN=7d
+FRONTEND_URL=http://localhost:PORTNUMBER
 
 # ===========================
 # ADMIN USER SEED
@@ -38,3 +39,5 @@ CLOUDINARY_API_SECRET=ton_secret
 VAPID_PUBLIC_KEY=EXAMPLEKEY...
 VAPID_PRIVATE_KEY=EXAMPLEKEY...
 VAPID_SUBJECT=https://mon-app.com
+
+ALLOWED_ORIGINS=votre-frontend.com,localhost:8080, ${FRONTEND_URL}
